fixed overflow

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,7 @@
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
+      overflow: hidden;
   }
   
   #part1 {
@@ -31,6 +32,4 @@
     padding-top:20%;
   }
 
-  #noFlow {
-      overflow: hidden;
-  }
+  
